service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
